# Automatic-PII-preprocessing-tool

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  DEPLOY_HF_SPACES.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_eval.py  streamlit_app.py
.claude/: settings.json
.claude/skills/run-evaluation/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/: .gitkeep
docs/: CHANGELOG.md  DEPLOY_HF_SPACES.md  DEPLOY_STREAMLIT_CLOUD.md  report.md  role_alignment.md  tool_card.md
experiments/: FAILED.md
noteguard/: data.py  detect.py  recognizers.py  transform.py  trust_demo.py
outputs/: .gitkeep
scripts/: post_edit_check.py
src/: __init__.py  analyzer.py  anonymize.py  catalog.py  cohorts.py  config.py  detect.py  evaluate.py  ingest.py  llm_assure.py  load_data.py  pipeline.py  quality.py  transform.py  trust_demo.py
src/recognizers/: __init__.py  clinician_ids.py  nhs_number.py  ods_code.py  record_ids.py  roster.py  uk_entities.py
tests/: run_eval.py  test_anonymize.py  test_leakage.py  test_nhs_number.py  test_pipeline.py  test_privacy.py  test_recognisers.py  test_recognizers.py  test_transform.py
